[package]
name = "celestium"
version = "0.1.0"
authors = ["Jens Hegner Stærmose <jhs@artificialmind.ai>"]
edition = "2018"

[profile.release]
debug = true

[lib]
name = "celestium"
path = "src/lib.rs"

[dependencies]
sha2 = "0.9.2"
num = "*"
chrono = "0.4.19"
criterion = "0.3"

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]

[dependencies.secp256k1]
version = "0.19.0"
features = ["rand"]

[[bench]]
name = "my_benchmark"
harness = false