[package]
name = "celestium"
version = "0.1.0"
authors = ["Jens Hegner Stærmose <jhs@artificialmind.ai>"]
edition = "2018"

[lib]
name = "celestium"
path = "src/lib.rs"

[dependencies]
sha2 = "0.9"
rust-crypto = "0.2"
criterion = "0.3"

[dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]

[dependencies.secp256k1]
version = "0.19"
features = ["rand"]

[[bench]]
name = "my_benchmark"
harness = false